refactor : 테스트코드 작성을 위한 메소드 반환값 수정